jasper/force-app/main/default/objects/WA_Bot_Setting__c/WA_Bot_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Config for the Jasper WhatsApp bot backend (base URL + API key). Values set at runtime, not in source.</description>
    <label>WA Bot Setting</label>
</CustomObject>