jasper/force-app/main/default/objects/WA_Bot_Setting__c/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <label>Base URL</label>
    <type>Text</type>
    <length>255</length>
</CustomField>