jasper/force-app/main/default/objects/WA_Bot_Setting__c/fields/Booking_Welcome_Template__c.field-meta.xml
<CustomField>
    <fullName>Booking_Welcome_Template__c</fullName>
    <label>Booking Welcome Template</label>
    <type>Text</type>
    <length>80</length>
    <description>Approved template name sent automatically when a booking (Order) is created.</description>
</CustomField>