jasper/force-app/main/default/objects/WA_Bot_Setting__c/fields/Delivery_Greeting_Template__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Greeting_Template__c</fullName>
    <label>Delivery Greeting Template</label>
    <type>Text</type>
    <length>80</length>
    <description>Approved template name sent automatically when an Order reaches the delivery stage.</description>
</CustomField>